--- a/world/kwin/PKGBUILD
+++ b/world/kwin/PKGBUILD
@@ -3,14 +3,15 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwin
-pkgver=6.3.5
+pkgver=6.4.0
 _dirver=$(echo $pkgver | cut -d. -f1-3)
-pkgrel=2
-pkgdesc='An easy to use, but flexible, composited Window Manager'
+pkgrel=2.2
+pkgdesc='An easy to use, but flexible, Wayland compositor'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
 license=(LGPL-2.0-or-later)
-depends=(breeze
+depends=(aurorae
+         breeze
          gcc-libs
          glibc
          plasma-activities
@@ -18,7 +19,6 @@ depends=(breeze
          kcmutils
          kcolorscheme
          kconfig
-         kconfigwidgets
          kcoreaddons
          kcrash
          kdbusaddons
@@ -51,23 +51,18 @@ depends=(breeze
          libinput
          libpipewire
          libqaccessibilityclient-qt6
-         libx11
          libxcb
          libxcvt
-         libxi
          libxkbcommon
-         libxkbcommon-x11
          mesa
          pipewire-session-manager
          libplasma
          qt6-5compat
          qt6-base
          qt6-declarative
-         qt6-multimedia
          qt6-sensors
          qt6-svg
          qt6-tools
-         qt6-wayland
          libelogind
          wayland
          xcb-util-cursor
@@ -80,11 +75,11 @@ makedepends=(extra-cmake-modules
              python
              wayland-protocols
              xorg-xwayland)
-optdepends=('maliit-keyboard: virtual keyboard for kwin-wayland')
+optdepends=('maliit-keyboard: virtual keyboard')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$_dirver/$pkgname-$pkgver.tar.xz{,.sig})
 install=$pkgname.install
-sha256sums=('d71cdacbab35f8139e799fe0013248f68e802ba516411b446d5d66c30bd7e5ec'
+sha256sums=('0d3492317a719a645bf2893fcac21bb2979606baf3703610e556b5f7ad54de6a'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
