--- a/world/kio-extras/.artixlinux/srcinfo.yaml
+++ b/world/kio-extras/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 25.04.2-1
+version: 25.04.2-2
 pkgbase:
   name: kio-extras
   pkgdesc: Additional components to increase the functionality of KIO
   pkgver: 25.04.2
-  pkgrel: 1
+  pkgrel: 2
   url: https://www.kde.org/
   arch:
     - x86_64
@@ -19,6 +19,7 @@ pkgbase:
     - kdoctools
     - libappimage
     - openexr
+    - phonon-qt6
     - plasma-activities-stats
     - qcoro
     - taglib
@@ -47,7 +48,6 @@ pkgbase:
     - libssh
     - libtirpc
     - libxcursor
-    - phonon-qt6
     - plasma-activities
     - qt6-5compat
     - qt6-base
@@ -63,6 +63,7 @@ pkgbase:
     - 'libappimage: AppImage thumbnails'
     - 'openexr: EXR format thumbnails'
     - 'perl: info kioslave'
+    - 'phonon-qt6: audio file previews in file dialogs'
     - 'plasma-activities-stats: recently used kioslave'
     - 'qt6-imageformats: thumbnails for additional image formats'
     - 'taglib: audio file thumbnails'
@@ -78,4 +79,4 @@ pkgbase:
     - SKIP
 pkgname:
   - name: kio-extras
-# generated with artixpkg 0.36.3-2-any
+# generated with artixpkg 0.36.4-1-any
