--- a/world/kmymoney/.artixlinux/pkgbase.yaml
+++ b/world/kmymoney/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 5.1.3-26
+    version: 5.2.0-3
     packages:
-      - kmymoney-5.1.3-26-x86_64.pkg.tar.zst
+      - kmymoney-5.2.0-3-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
