--- a/world/libalkimia/.artixlinux/pkgbase.yaml
+++ b/world/libalkimia/.artixlinux/pkgbase.yaml
@@ -1,54 +1,60 @@
 ---
-pkgbase:
-  name: libalkimia
-  version: 8.1.2-3
-  arch:
-    - x86_64
-  pkgname:
-    - libalkimia
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 8.1.2-3
+    version: 8.2.0-1
     packages:
-      - libalkimia-8.1.2-3-x86_64.pkg.tar.zst
+      - libalkimia-8.2.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
+team: world
