--- a/world/libalkimia/PKGBUILD
+++ b/world/libalkimia/PKGBUILD
@@ -4,31 +4,27 @@
 # Contributor: gumper <gumper1034@gmail.com>
 
 pkgname=libalkimia
-pkgver=8.1.2
-pkgrel=3
+pkgver=8.2.0
+pkgrel=1
 pkgdesc="A library with common classes and functionality used by finance applications for the KDE SC"
 arch=('x86_64')
 url="https://community.kde.org/Alkimia/libalkimia"
 license=('LGPL')
-depends=('qt5-webengine' 'knewstuff5' 'hicolor-icon-theme' 'perl')
-makedepends=('cmake' 'doxygen' 'extra-cmake-modules' 'kdoctools5')
+depends=('qt6-webengine' 'knewstuff' 'ktextwidgets')
+makedepends=('cmake' 'doxygen' 'extra-cmake-modules' 'kdoctools')
 source=(https://download.kde.org/stable/alkimia/$pkgver/alkimia-$pkgver.tar.xz{,.sig})
-validpgpkeys=('2060FF0BBF0E77C4E56DECE0B3DA98B373A0D6FA'
-              '8C13BC14185A65215B592A2F1243132CD9321771'
-              '91F17B048CF4668CD27FE9FBD3694D8B346FCA80') # Ralf Habacker <ralf.habacker@freenet.de>
-sha256sums=('cf846ee87b9cc630f58e0bdd23334296810ba3bcc1751fe2f4722161897ee33a'
+validpgpkeys=('91F17B048CF4668CD27FE9FBD3694D8B346FCA80'  # Ralf Habacker <ralf.habacker@freenet.de>
+              'D69A745A55331F44F404D8258D4DE062AA2EB01C') # Thomas Baumgart <thb@net-bembel.de>
+sha256sums=('68ee1ac4b3ea0516ada66343889d871170b3da63fc9fac89a0c5675af6583996'
             'SKIP')
 
 build() {
-  mkdir build
-  cd build
-
-  cmake -DSHARE_INSTALL_DIR=/usr/share -DBUILD_APPLETS=OFF ../alkimia-${pkgver}
-  make
+  cmake -B build -S alkimia-$pkgver \
+    -DQT_MAJOR_VERSION=6 \
+    -DBUILD_APPLETS=OFF
+  cmake --build build
 }
 
 package() {
-  cd build
-
-  make DESTDIR="${pkgdir}" install
+  DESTDIR="${pkgdir}" cmake --install build
 }
