--- a/world/noto-fonts-emoji/.artixlinux/pkgbase.yaml
+++ b/world/noto-fonts-emoji/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: noto-fonts-emoji
-  version: 1:2.047-1
-  arch:
-    - any
-  pkgname:
-    - noto-fonts-emoji
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1:2.047-1
+    version: 1:2.048-1
     packages:
-      - noto-fonts-emoji-1:2.047-1-any.pkg.tar.zst
+      - noto-fonts-emoji-1:2.048-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
