--- a/galaxy/lxqt-build-tools/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxqt-build-tools/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: lxqt-build-tools
-  version: 2.2.0-1
-  arch:
-    - any
-  pkgname:
-    - lxqt-build-tools
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 2.2.0-1
+    version: 2.2.1-1
     packages:
-      - lxqt-build-tools-2.2.0-1-any.pkg.tar.zst
+      - lxqt-build-tools-2.2.1-1-any.pkg.tar.zst
+    debug: []
 team: galaxy
