--- a/world/dvisvgm/PKGBUILD
+++ b/world/dvisvgm/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=dvisvgm
 pkgver=3.5
-pkgrel=1
+pkgrel=2
 pkgdesc='A fast DVI, EPS, and PDF to SVG converter'
 arch=(x86_64)
 url='https://dvisvgm.de/'
@@ -13,6 +13,7 @@ depends=(brotli
          ghostscript
          glibc
          potrace
+         texlive-basic
          texlive-bin
          woff2
          xxhash
