--- a/world/hyprgraphics/.artixlinux/pkgbase.yaml
+++ b/world/hyprgraphics/.artixlinux/pkgbase.yaml
@@ -1,56 +1,60 @@
 ---
 team: world
-pkgbase:
-  name: hyprgraphics
-  version: 0.1.3-4
-  arch:
-    - x86_64
-    - aarch64
-  pkgname:
-    - hyprgraphics
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.1.3-4
+    version: 0.1.4-1
     packages:
-      - hyprgraphics-0.1.3-4-x86_64.pkg.tar.zst
+      - hyprgraphics-0.1.4-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
