--- a/world/vst3sdk/.artixlinux/pkgbase.yaml
+++ b/world/vst3sdk/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: vst3sdk
-  version: 3.7.13_build_42-1
-  arch:
-    - any
-  pkgname:
-    - vst3sdk
-    - vst3sdk-docs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.7.13_build_42-1
+    version: 3.7.14_build_55-1
     packages:
-      - vst3sdk-3.7.13_build_42-1-any.pkg.tar.zst
-      - vst3sdk-docs-3.7.13_build_42-1-any.pkg.tar.zst
+      - vst3sdk-3.7.14_build_55-1-any.pkg.tar.zst
+      - vst3sdk-docs-3.7.14_build_55-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
