--- a/world/zabbix/.artixlinux/pkgbase.yaml
+++ b/world/zabbix/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,14 +29,14 @@ repos:
     packages: []
     debug: []
   world:
-    version: 7.2.7-1
+    version: 7.2.9-1
     packages:
-      - zabbix-server-7.2.7-1-x86_64.pkg.tar.zst
-      - zabbix-agent-7.2.7-1-x86_64.pkg.tar.zst
-      - zabbix-agent2-7.2.7-1-x86_64.pkg.tar.zst
-      - zabbix-proxy-7.2.7-1-x86_64.pkg.tar.zst
-      - zabbix-frontend-php-7.2.7-1-x86_64.pkg.tar.zst
-      - zabbix-web-service-7.2.7-1-x86_64.pkg.tar.zst
+      - zabbix-server-7.2.9-1-x86_64.pkg.tar.zst
+      - zabbix-agent-7.2.9-1-x86_64.pkg.tar.zst
+      - zabbix-agent2-7.2.9-1-x86_64.pkg.tar.zst
+      - zabbix-proxy-7.2.9-1-x86_64.pkg.tar.zst
+      - zabbix-frontend-php-7.2.9-1-x86_64.pkg.tar.zst
+      - zabbix-web-service-7.2.9-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
